--- a/nas-tym.html
+++ b/nas-tym.html
@@ -83,7 +83,7 @@ permalink: /nas-tym/
 <h3>Tereza Skalická - koordinátorka</h3>
 <img src="/assets/tym/tereza.jpg" />
 
-<p>Ahoj! Jsem Tereza a v Malejově zastávám část koordinační práce. Ráda spolupracuji v týmu a baví mě vytvářet zázemí pro práci a příjemné prostředí pro nás všechny. S manželem Honzou máme tři děti – Kryštofa, Magdalénu a Jenovéfu. Děti mi otevřely dveře k řadě témat, jedním z nich jsou různé možnosti vzdělávání.</p>
+<p>Ahoj! Jsem Tereza a v Malejově zastávám část koordinační práce. Ráda spolupracuji v týmu a baví mě vytvářet zázemí pro práci a příjemné prostředí pro nás všechny. S manželem Honzou máme čtyři děti – Kryštofa, Magdalénu, Jenovéfu a Filoménu. Děti mi otevřely dveře k řadě témat, jedním z nich jsou různé možnosti vzdělávání.</p>
 
 <p>Vystudovala jsem žurnalistiku, zajímám se o společenská témata a snažím se aspoň drobnostmi přispívat ke zlepšování prostředí, v němž žijeme. Ráda trávím čas s naší rozvětvenou rodinou a s přáteli. Jsem rodilá Pražačka, ale speciálním místem je pro mě také Šumava, odkud pochází část mé rodiny.</p>
 
