update tymu - odebrana marketa, marie hlavni pruvodkyne

--- a/nas-tym.html
+++ b/nas-tym.html
@@ -14,18 +14,9 @@ permalink: /nas-tym/
 .person:nth-child(odd) p { margin-right: 320px; }
 </style>
 
-<div class="person">
-<h3>Markéta Trombiková - hlavní průvodkyně</h3>
-<img src="/assets/tym/marketa.jpg" />
-
-<p>Ahoj! Jmenuji se Markéta a původně pocházím z krásné Litomyšle. Vystudovala jsem magisterský obor Sociální pedagogika na Univerzitě Palackého v Olomouci. Vyrůstala jsem ve skautu a skauting se stal mým životním stylem. Líbí se mi myšlenka snažit se žít tak, abych zanechala svět lepším. Ráda bych, aby se tento postoj odrážel v mém životě a také v lesním klubu. Čas trávený s dětmi mě baví a obohacuje a vnímám jej jako nesmírně důležitý, jelikož vím, že dětství ovlivňuje postoje, hodnoty a život člověka v dospělosti.</p>
-
-<p>Dětství jsem trávila v lese u rybníka, kde mě taťka učil rybařit a poznávat přírodu. Mám ráda toulky budislavskými lesy s pískovcovými skalami, divoký oceán na jihu Anglie, trampské písničky u plápolajícího ohně, zachycování atmosféry objektivem zrcadlovky a černý čaj s mlékem! :-)</p>
-</div>
-
 
 <div class="person">
-<h3>Marie Vavřínová</h3>
+<h3>Marie Vavřínová - hlavní průvodkyně</h3>
 <img src="/assets/tym/marie.jpg" />
 
 <p>Ahoj, jmenuji se Marie. Čas prožitý s dětmi si neskutečně užívám. Ať už jako dlouholetá vedoucí a zdravotnice farních táborů, hlídačka dětí, skautka anebo studentka předškolní pedagogiky. Naplňuje mě dětská bezprostřednost a hravost.</p>
