--- a/nas-tym.html
+++ b/nas-tym.html
@@ -59,7 +59,7 @@ permalink: /nas-tym/
 
 
 <div class="person">
-<h3>Natalie Baránková - koordinátorka</h3>
+<h3>Natalie Baránková - ředitelka</h3>
 <img src="/assets/tym/naty.jpg" />
 
 <p>Ahoj, jmenuji se Natalie, v současné chvíli jsem ze všeho nejvíc máma tří báječných hnědookých kluků, Timoteje, Jonatana a Samuela. Kdysi dávno jsem vystudovala tři značně nepraktické obory na Filosofické fakultě UK: Hebraistiku, Srovnávací literární vědu a Učitelství českého jazyka a literatury.</p>
