--- a/nas-tym.html
+++ b/nas-tym.html
@@ -67,6 +67,15 @@ permalink: /nas-tym/
 
 
 <div class="person">
+<h3>Kamila Zatloukalová - ředitelka</h3>
+    
+<p>Ahoj, jsem Kamila a můj první kontakt s Malejovem byl na podzim 2017, kdy jsme se začali pravidelně setkávat s maminkami a dětmi v oboře Hvězda. Tam jsem potkala nejen Terezu a Natalii, ale postupně další velmi inspirativní osobnosti a společně začali tvořit lesní klub.</p>
+    
+<p>Malejov je rozšířená rodina, a vytváříme lesní domov pro svoje děti a jejich dospělé. Baví mě nejen společně s průvodkyněmi pečovat o blaho a rozvoj dětí v souladu s přírodou, ale i propojovat společenství rodičů, přátel, nadšenců pro lesní školky, bláto a přírodu, aby všechno hladce fungovalo, a aby mohly děti postupně vykročit do velkého světa posílené o spoustu silných zážitků, krásných zkušeností nabytých v lese.</p>
+</div>
+
+
+<div class="person">
 <h3>Natalie Baránková - mentorka</h3>
 <img src="/assets/tym/naty.jpg" />
 
