--- a/nas-tym.html
+++ b/nas-tym.html
@@ -38,12 +38,14 @@ permalink: /nas-tym/
 
 
 <div class="person">
-<h3>Eva Svitáková - průvodkyně</h3>
+<h3>Amálie Domanjová - průvodkyně</h3>
 <img src="/assets/tym/eva.jpg" />
 
-<p>Ahoj, jmenuju se Eva, to jméno prý znamená živa a s tímto živem v sobě se neustále vyrovnávám. Skrze různé cesty přes výuku v hudebce, výchovu synů a dcery, asistování v základní škole, obchodování se zelenými potravinami, které mám stále ráda, mě to přivedlo až do lesní školky, kterou jsem si ze srdce přála pro svoje čtyři děti.</p>
+<p>Ahoj, jsem Áma a v Malejově působím jako průvodkyně od roku 2022. Můj vztah k přírodě a dětem se zrodil už dříve díky skautu, kde jsem pět let vedla oddíl skautek a pořádala letní tábory.</p>
 
-<p>Miluju vytváření hudby jakýmkoliv způsobem a pozorování jejích blahodárných relaxačních účinků. Ale nejbližší je mi hudba skrze příčnou flétnu, hru jsem studovala na Pražské konzervatoři a AMU, pak skrze kytaru i zpěv. Miluju svobodu. Svobodu poznávání nejvíc. A tu bych chtěla dopřát při svém průvodcování dětem v lesní školce Malejov.</p>
+<p>Být venku, žít v souladu s přírodou a sdílet tyto okamžiky s dětmi je pro mě zdrojem radosti a rovnováhy.</p>
+
+</p>Kromě provázení dětí v našem lesním klubu vedu také lesní výtvarku. S dětmi tvoříme v lese, využíváme materiály, které nám příroda nabízí. Nasáváme atmosféru lesa, zpomalujeme, nasloucháme šumu listí a toku potoka, a všemi smysly objevujeme krásu, která nás obklopuje.</p>
 </div>
 
 
@@ -57,10 +59,10 @@ permalink: /nas-tym/
 
 
 <div class="person">
-<h3>Lenka Votavová - průvodkyně</h3>
+<h3>Eva Doláková - průvodkyně</h3>
 <img src="/assets/tym/lenka.jpg" />
 
-<p>Ahoj! Jmenuji se Leni. Než jsem se dostala do Malejova, točil se můj svět kolem mých tří dětí, předškolní přípravy a domácnosti. I dnes trávím většinu času s dětmi, ráda s nimi zpívám, tvořím, čtu a učím se nové věci - zejména o přírodě, vesmíru, psychologii.</p>
+<p>Ahoj! Jmenuji se Eva. Než jsem se dostala do Malejova, točil se můj svět kolem mých tří dětí, předškolní přípravy a domácnosti. I dnes trávím většinu času s dětmi, ráda s nimi zpívám, tvořím, čtu a učím se nové věci - zejména o přírodě, vesmíru, psychologii.</p>
 
 <p>Po studiích filozofie na Filozofické fakultě ZČU jsem několik let pracovala na odbavení letiště Praha a krátce jako průvodkyně Štefánikovy hvězdárny. Ačkoli jsem si velmi užívala rušnou atmosféru letiště, po rodičovské jsem dala přednost práci v přírodě s dětmi. Les mě nejlépe dobíjí energií, v jeho blízkosti žiju celý život. Také si dobře odpočinu při pozorování denní či noční oblohy, zahradničení nebo řešení logických hádanek. Někdy mám ráda svůj klid, ale jsem vděčná za to, co mě soužití s dětmi naučilo a stále učí a věřím, že i já mám dětem co předat.</p>
 </div>
@@ -72,18 +74,6 @@ permalink: /nas-tym/
 <p>Ahoj, jsem Kamila a můj první kontakt s Malejovem byl na podzim 2017, kdy jsme se začali pravidelně setkávat s maminkami a dětmi v oboře Hvězda. Tam jsem potkala nejen Terezu a Natalii, ale postupně další velmi inspirativní osobnosti a společně začali tvořit lesní klub.</p>
     
 <p>Malejov je rozšířená rodina, a vytváříme lesní domov pro svoje děti a jejich dospělé. Baví mě nejen společně s průvodkyněmi pečovat o blaho a rozvoj dětí v souladu s přírodou, ale i propojovat společenství rodičů, přátel, nadšenců pro lesní školky, bláto a přírodu, aby všechno hladce fungovalo, a aby mohly děti postupně vykročit do velkého světa posílené o spoustu silných zážitků, krásných zkušeností nabytých v lese.</p>
-</div>
-
-
-<div class="person">
-<h3>Natalie Baránková - mentorka</h3>
-<img src="/assets/tym/naty.jpg" />
-
-<p>Ahoj, jmenuji se Natalie, v současné chvíli jsem ze všeho nejvíc máma tří báječných hnědookých kluků, Timoteje, Jonatana a Samuela. Kdysi dávno jsem vystudovala tři značně nepraktické obory na Filosofické fakultě UK: Hebraistiku, Srovnávací literární vědu a Učitelství českého jazyka a literatury.</p>
-
-<p>Ráda čtu, hraju na housle a piju víno na balkoně, to všechno teď v poněkud omezené míře. Zato pořád hodně zpívám, kreslím, vyprávím příběhy a neustále odpovídám na otázky. Z mého perfekcionismu mě báječně vyvádějí děti (především ty vlastní), ale i tak jsem dost vytrvalá a ráda věci dotahuju do konce, když už se do něčeho pustím.</p>
-
-<p>Na práci v lesním klubu mě nejvíc baví vytváření komunity a péče o ni. Je to dost velká alchymie a výsledek je nejistý. Nepřestává mě však fascinovat, že celek je víc než souhrn jeho částí.</p>
 </div>
 
 
@@ -100,12 +90,26 @@ permalink: /nas-tym/
 
 
 <div class="person">
-<h3>Zuzana Turková - pokladník</h3>
+<h3>Lucia Dorniaková - asistentka koordinace</h3>
+<img src="/assets/tym/naty.jpg" />
+
+<p>Ahoj! Jsem Lucia a v Malejově působím jako asistentka koordinátora. Podporuji tým v každodenním chodu, pomáhám s organizací a ráda přináším do věcí přehled, pohodu a jemný řád. Baví mě, když vše plyne přirozeně a lidé se mohou soustředit na to podstatné.</p>
+
+<p>Pocházím z podhůří Tater, kde mě příroda od dětství učí trpělivosti, rovnováze a síle. Vystudovala jsem rekreologii, obor, který krásně propojuje pohyb, odpočinek a duševní harmonii.</p>
+
+<p>Miluju hory, vůni lesa po dešti a chvíle, kdy můžu být venku v tichu i v pohybu.</p>
+</div>
+
+
+<div class="person">
+<h3>Hana Černá - administratívna podpora a pokladník</h3>
 <img src="/assets/tym/zuzka_cfo.jpg" />
 
-<p>Ahoj, jmenuji se Zuzana a jsem možná jednou z nejpraktičtějších osob v Malejově, ačkoli jsem vystudovala dějiny umění na Filozofické fakultě UK. Pocházím z Litomyšle, pár let jsem strávila ve Španělsku, ale nakonec jsem zakotvila v Praze, kde s manželem vychováváme naše dvě dcery - Johanku a Josefinku.</p>
+<p>Jmenuji se Hanka a v našem lesním klubu mám na starosti velkou část administrativy – od účetnictví a smluv až po hlídání rozpočtu a podporu plynulého chodu celého ekonomického zázemí.</p>
 
-<p>Můj život zásadně ovlivnilo dlouholeté působení ve skautu, kde jsem se naučila snad všechny pro život důležité věci a dovednosti.</p>
+<p>Vystudovala jsem oděvní průmyslovku, transkulturní komunikaci a pedagogiku. Několik let jsem působila v korporátním prostředí na manažerských pozicích, ale s příchodem dětí jsem se rozhodla zpomalit a přesunout svou energii tam, kde mi dává největší smysl – do prostředí škol a školek, kde se pracuje s respektem, klidem a opravdovým zájmem o člověka.</p>
 
-<p>Miluju pozorování dětského zápalu a absolutního soustředění při hře. Ve zbytcích volného času se ráda toulám po horách, sejdu se s přáteli nebo si přečtu knihu. Baví mě architektura a urbanismus. Jsem poměrně dobrý nakopávač a rozjížděč, ale špatný dotahovač.</p>
+<p>Dnes pomáhám po administrativní stránce našemu lesnímu klubu i dalším vzdělávacím projektům. Tahle práce mi umožňuje být mámou „na plný úvazek“ – pro své dva malé syny (2 a 4 roky) – a zároveň zůstat propojená se světem, kde se děje něco dobrého.</p>
+
+<p>Mám ráda pořádek v papírech, ale i v myšlenkách, vůni lesa po dešti, ticho, které se ozývá mezi větvemi, a pocit, že moje práce pomáhá držet náš klub v chodu, aby v něm mohly děti růst svobodně a s radostí.</p>
 </div>
