--- a/nas-tym.html
+++ b/nas-tym.html
@@ -39,7 +39,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Amálie Domanjová - průvodkyně</h3>
-<img src="/assets/tym/eva.jpg" />
+<img src="/assets/tym/amalia.jpeg" />
 
 <p>Ahoj, jsem Áma a v Malejově působím jako průvodkyně od roku 2022. Můj vztah k přírodě a dětem se zrodil už dříve díky skautu, kde jsem pět let vedla oddíl skautek a pořádala letní tábory.</p>
 
@@ -60,11 +60,13 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Eva Doláková - průvodkyně</h3>
-<img src="/assets/tym/lenka.jpg" />
+<img src="/assets/tym/eva_dol.jpeg" />
 
-<p>Ahoj! Jmenuji se Eva. Než jsem se dostala do Malejova, točil se můj svět kolem mých tří dětí, předškolní přípravy a domácnosti. I dnes trávím většinu času s dětmi, ráda s nimi zpívám, tvořím, čtu a učím se nové věci - zejména o přírodě, vesmíru, psychologii.</p>
+<p>Ahoj, jmenuji se Eva. Jsem průvodkyní v Malejově, kde mě těší doprovázet děti na jejich cestě poznávání světa i sebe samých.</p>
 
-<p>Po studiích filozofie na Filozofické fakultě ZČU jsem několik let pracovala na odbavení letiště Praha a krátce jako průvodkyně Štefánikovy hvězdárny. Ačkoli jsem si velmi užívala rušnou atmosféru letiště, po rodičovské jsem dala přednost práci v přírodě s dětmi. Les mě nejlépe dobíjí energií, v jeho blízkosti žiju celý život. Také si dobře odpočinu při pozorování denní či noční oblohy, zahradničení nebo řešení logických hádanek. Někdy mám ráda svůj klid, ale jsem vděčná za to, co mě soužití s dětmi naučilo a stále učí a věřím, že i já mám dětem co předat.</p>
+<p>Miluji pohyb, proto se ráda věnuji józe, která mi přináší rovnováhu těla i mysli. Pečuji o své zdraví, psychiku a vnímám život jako prostor pro růst, laskavost a radost.</p>
+
+<p>V Malejově nacházím místo, kde se propojuje příroda, společenství a vnitřní harmonie – vše, co mi dává smysl.</p>
 </div>
 
 
@@ -91,7 +93,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Lucia Dorniaková - asistentka koordinace</h3>
-<img src="/assets/tym/naty.jpg" />
+<img src="/assets/tym/lucia.jpeg" />
 
 <p>Ahoj! Jsem Lucia a v Malejově působím jako asistentka koordinátora. Podporuji tým v každodenním chodu, pomáhám s organizací a ráda přináším do věcí přehled, pohodu a jemný řád. Baví mě, když vše plyne přirozeně a lidé se mohou soustředit na to podstatné.</p>
 
@@ -103,7 +105,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Hana Černá - administratívna podpora a pokladník</h3>
-<img src="/assets/tym/zuzka_cfo.jpg" />
+<img src="/assets/tym/hana.jpeg" />
 
 <p>Jmenuji se Hanka a v našem lesním klubu mám na starosti velkou část administrativy – od účetnictví a smluv až po hlídání rozpočtu a podporu plynulého chodu celého ekonomického zázemí.</p>
 
