--- a/nas-tym.html
+++ b/nas-tym.html
@@ -60,7 +60,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Eva Doláková - průvodkyně</h3>
-<img src="/assets/tym/eva_dolakova.jpg" />
+<img src="/assets/tym/eva_dol.jpg" />
 
 <p>Ahoj, jmenuji se Eva. Jsem průvodkyní v Malejově, kde mě těší doprovázet děti na jejich cestě poznávání světa i sebe samých.</p>
 
