--- a/nas-tym.html
+++ b/nas-tym.html
@@ -104,7 +104,7 @@ permalink: /nas-tym/
 
 
 <div class="person">
-<h3>Hana Černá - administratívna podpora a pokladník</h3>
+<h3>Hana Černá - administrativní podpora a pokladník</h3>
 <img src="/assets/tym/hana.jpeg" />
 
 <p>Jmenuji se Hanka a v našem lesním klubu mám na starosti velkou část administrativy – od účetnictví a smluv až po hlídání rozpočtu a podporu plynulého chodu celého ekonomického zázemí.</p>
