--- a/nas-tym.html
+++ b/nas-tym.html
@@ -39,7 +39,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Amálie Domanjová - průvodkyně</h3>
-<img src="/assets/tym/amalia.jpeg" />
+<img src="/assets/tym/amalie.jpg" />
 
 <p>Ahoj, jsem Áma a v Malejově působím jako průvodkyně od roku 2022. Můj vztah k přírodě a dětem se zrodil už dříve díky skautu, kde jsem pět let vedla oddíl skautek a pořádala letní tábory.</p>
 
@@ -72,6 +72,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Kamila Zatloukalová - ředitelka</h3>
+<img src="/assets/tym/kamila.jpg" />
     
 <p>Ahoj, jsem Kamila a můj první kontakt s Malejovem byl na podzim 2017, kdy jsme se začali pravidelně setkávat s maminkami a dětmi v oboře Hvězda. Tam jsem potkala nejen Terezu a Natalii, ale postupně další velmi inspirativní osobnosti a společně začali tvořit lesní klub.</p>
     
