--- a/nas-tym.html
+++ b/nas-tym.html
@@ -39,7 +39,7 @@ permalink: /nas-tym/
 
 <div class="person">
 <h3>Amálie Domanjová - průvodkyně</h3>
-<img src="/assets/tym/amalie.jpg" />
+<img src="/assets/tym/amalia.jpeg" />
 
 <p>Ahoj, jsem Áma a v Malejově působím jako průvodkyně od roku 2022. Můj vztah k přírodě a dětem se zrodil už dříve díky skautu, kde jsem pět let vedla oddíl skautek a pořádala letní tábory.</p>
 
