--- a/nas-tym.html
+++ b/nas-tym.html
@@ -41,7 +41,12 @@ permalink: /nas-tym/
 <h3>Amálie Domanjová - průvodkyně</h3>
 <img src="/assets/tym/amalia.jpeg" />
 
+<p align="justify">Ahoj, jsem Áma a v Malejově působím jako průvodkyně od roku 2022. Můj vztah k přírodě a dětem se zrodil už dříve díky skautu, kde jsem pět let vedla oddíl skautek a pořádala letní tábory.</p>
 
+<p>Být venku, žít v souladu s přírodou a sdílet tyto okamžiky s dětmi je pro mě zdrojem radosti a rovnováhy.</p>
+
+</p>Kromě provázení dětí v našem lesním klubu vedu také lesní výtvarku. S dětmi tvoříme v lese, využíváme materiály, které nám příroda nabízí. Nasáváme atmosféru lesa, zpomalujeme, nasloucháme šumu listí a toku potoka, a všemi smysly objevujeme krásu, která nás obklopuje.</p>
+</div>
 
 
 <div class="person">
